# advertisement

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_web  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  settings.py  setup.cfg  tags_metadata.py
alembic/: env.py
alembic/versions/: 0000.py  0001.py  0002.py
apps/: __init__.py  main.py
apps/advertisements/: __init__.py  adv_utilities.py  handlers.py  models.py  routers.py  schemas.py  statements.py
apps/authorization/: __init__.py  auth_utilities.py  handlers.py  routers.py  schemas.py
apps/common/: __init__.py  base_routers.py  base_statements.py  common_types.py  common_utilities.py  constants.py  db.py  dependencies.py  enum.py  exceptions.py  exceptions_handlers.py  orm_services.py  schemas.py  user_dependencies.py
apps/scripts/: __init__.py  admin_user.py
apps/user/: __init__.py  handlers.py  models.py  routers.py  schemas.py  statements.py
celery_app/: __init__.py  worker.py
spider/: __init__.py  items.py  middlewares.py  pipelines.py  scripts.py  settings.py
spider/project_utilities/: __init__.py  save_utilities.py
spider/spiders/: __init__.py  adv_spider.py  advs_spider.py
tests/: __init__.py  bases.py  conftest.py
tests/apps/: __init__.py  conftest.py
tests/apps/advertisements/: __init__.py  factories.py  test_adv_utilities.py  test_handlers.py  test_models.py  test_routers.py
tests/apps/user/: __init__.py  factories.py  test_models.py
