[tool.poetry]
name = "experimental"
version = "0.1.0"
description = ""
authors = ["victor_nuzhnyi <nuzhniyva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
passlib = "^1.7.4"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
databases = "^0.9.0"
sqlalchemy-utils = "^0.41.2"
pydantic-settings = "^2.2.1"
pytz = "^2024.1"
python-multipart = "^0.0.9"
bcrypt = "4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.13.1"
python-dateutil = "^2.9.0.post0"
scrapy = "^2.11.2"
celery = "^5.4.0"
redis = "^5.0.4"
asyncio = "^3.4.3"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
xenon = "^0.9.1"
isort = "^5.13.2"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
wemake-python-styleguide = "^0.19.2"
types-pytz = "^2024.1.0.20240417"
types-python-dateutil = "^2.9.0.20240316"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.15.0"
pytest-clarity = "^1.0.1"
faker = "^25.2.0"
pydantic-factories = "^1.17.3"
pytest-alembic = "^0.11.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
)/
'''
include_trailing_comma = true

# === Pytest ===
[tool.pytest.ini_options]
norecursedirs = ["venv", ".venv", ".env", "migrations"]
testpaths = ["tests",]
console_output_style = "progress"
python_files = "test_*"
python_classes = "Test*"
python_functions = "test_*"
pytest_alembic_tests_folder = "tests/alembic"
asyncio_mode = "auto"
